Add deploy-from-repo support for artifacts (#13)
* Add deploy-from-repo artifact flow

* Document deploy-from-repo PR
